--- a/src/html/components/blocks/_addresses-block.html
+++ b/src/html/components/blocks/_addresses-block.html
@@ -100,7 +100,9 @@
             </div>
 
             <div class="addresses-block__visit">
-                <h3 class="addresses-block__subtitle">Посетить салон</h3>
+                <h3 class="addresses-block__subtitle">
+                    Посетить салон
+                </h3>
                 <span class="addresses-block__subtext">
                     Оставьте заявку на сайте, и приходите в наш салон.
                 </span>
