--- a/src/html/components/blocks/_side-menu.html
+++ b/src/html/components/blocks/_side-menu.html
@@ -58,14 +58,14 @@
     <div class="navigation-connection">
         <ul class="socials">
             <li class="socials__item">
-                <a class="socials__link" href="#" target="_blank" aria-label="Ватсап">
+                <a class="socials__link" href="#" target="_blank" aria-label="whatsapp">
                     <svg>
                         <use xlink:href="img/sprite.svg#whatsapp">
                     </svg>
                 </a>
             </li>
             <li class="socials__item">
-                <a class="socials__link" href="#" target="_blank" aria-label="Телеграм">
+                <a class="socials__link" href="#" target="_blank" aria-label="telegram">
                     <svg>
                         <use xlink:href="img/sprite.svg#telegram">
                     </svg>
