--- a/src/html/components/blocks/header/_burger-menu.html
+++ b/src/html/components/blocks/header/_burger-menu.html
@@ -235,7 +235,7 @@
                     </a>
                 </li>
                 <li class="socials__item">
-                    <a class="socials__link" href="#" target="_blank" aria-label="Ютуб">
+                    <a class="socials__link" href="#" target="_blank" aria-label="youtube">
                         <svg>
                             <use xlink:href="img/sprite.svg#youtube">
                         </svg>
@@ -244,14 +244,14 @@
             </ul>
             <ul class="socials burger-menu__socials burger-menu__socials--mobile">
                 <li class="socials__item">
-                    <a class="socials__link" href="#" target="_blank" aria-label="Ватсап">
+                    <a class="socials__link" href="#" target="_blank" aria-label="whatsapp">
                         <svg>
                             <use xlink:href="img/sprite.svg#whatsapp">
                         </svg>
                     </a>
                 </li>
                 <li class="socials__item">
-                    <a class="socials__link" href="#" target="_blank" aria-label="Ютуб">
+                    <a class="socials__link" href="#" target="_blank" aria-label="telegram">
                         <svg>
                             <use xlink:href="img/sprite.svg#telegram">
                         </svg>
