--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -1,5 +1,6 @@
 // Ui
 @import '../components/ui/button';
+@import '../components/ui/elements-swiper';
 
 // header
 @import '../components/blocks/header/header';
@@ -29,3 +30,4 @@
 @import '../components/cards/banner-card';
 @import '../components/cards/nav-card';
 @import '../components/cards/address-card';
+@import '../components/cards/review-card';
