--- a/src/styles/includes/_libs.scss
+++ b/src/styles/includes/_libs.scss
@@ -1,2 +1,3 @@
 @import '../libs/modal';
 @import '../../../node_modules/graph-tabs/dist/graph-tabs.min';
+@import '../../../node_modules/swiper/swiper-bundle.min';
