add facades-production block

--- a/src/styles/includes/_pages.scss
+++ b/src/styles/includes/_pages.scss
@@ -1,3 +1,4 @@
 // home-page
+@import '../pages/home-page/facades-production';
 @import '../pages/home-page/reviews';
 @import '../pages/home-page/media';
