--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -31,3 +31,4 @@
 @import '../components/cards/nav-card';
 @import '../components/cards/address-card';
 @import '../components/cards/review-card';
+@import '../components/cards/step-card';
