--- a/src/styles/includes/_pages.scss
+++ b/src/styles/includes/_pages.scss
@@ -1,4 +1,5 @@
 // home-page
+@import '../pages/home-page/design-production';
 @import '../pages/home-page/facades-production';
 @import '../pages/home-page/reviews';
 @import '../pages/home-page/media';
