--- a/src/styles/mixins/_project.scss
+++ b/src/styles/mixins/_project.scss
@@ -66,3 +66,10 @@
 		padding-left: 20px;
 	}
 }
+
+@mixin circle($sizes: 6px) {
+	border-radius: 50%;
+	width: $sizes;
+	height: $sizes;
+	background-color: var(--color-orange-400);
+}
