--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -1,6 +1,7 @@
 // Ui
 @import '../components/ui/button';
 @import '../components/ui/swiper-elements';
+@import '../components/ui/tabs';
 
 // header
 @import '../components/blocks/header/header';
@@ -29,6 +30,7 @@
 // Cards
 @import '../components/cards/banner-card';
 @import '../components/cards/nav-card';
+@import '../components/cards/product-card';
 @import '../components/cards/address-card';
 @import '../components/cards/review-card';
 @import '../components/cards/step-card';
