--- a/src/styles/components/ui/_button.scss
+++ b/src/styles/components/ui/_button.scss
@@ -45,6 +45,20 @@
 		}
 	}
 
+	&--border,
+	&--secondary {
+		padding: 12px 20px;
+		color: var(--color-dark-600);
+	}
+
+	&--border {
+		border: 1px solid var(--color-grey-200);
+	}
+
+	&--secondary {
+		background-color: var(--color-grey-100);
+	}
+
 	&__decor {
 		@include flex-alignment;
 
