--- a/src/styles/components/ui/_swiper-elements.scss
+++ b/src/styles/components/ui/_swiper-elements.scss
@@ -20,7 +20,8 @@
 .swiper-pagination-bullet {
 	width: 6px;
 	height: 6px;
-	background-color: var(--color-grey-200);
+	background-color: var(--color-grey-300);
+	opacity: 1;
 }
 
 .swiper-pagination-bullet-active {
@@ -32,11 +33,14 @@
 	position: relative;
 	left: unset;
 	right: unset;
+	top: unset;
+	z-index: 8;
 	margin-top: 0;
 	border-radius: 1000px;
 	padding: 8px;
 	width: 56px;
 	height: 36px;
+	color: currentcolor;
 	background-color: var(--color-white);
 
 	&::before {
