--- a/src/styles/includes/_pages.scss
+++ b/src/styles/includes/_pages.scss
@@ -3,6 +3,7 @@
 @import '../pages/home-page/completed-projects/completed-projects-tabs';
 @import '../pages/home-page/design-production';
 @import '../pages/home-page/video-reviews';
+@import '../pages/home-page/convenience';
 @import '../pages/home-page/facades-production';
 @import '../pages/home-page/reviews';
 @import '../pages/home-page/media';
