--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -34,3 +34,4 @@
 @import '../components/cards/address-card';
 @import '../components/cards/review-card';
 @import '../components/cards/step-card';
+@import '../components/cards/blog-card';
