--- a/src/styles/pages/home-page/convenience/_convenience.scss
+++ b/src/styles/pages/home-page/convenience/_convenience.scss
@@ -81,6 +81,7 @@
 	}
 
 	&__image {
+		position: relative;
 		border-radius: 100%;
 		aspect-ratio: 1 / 1;
 
@@ -91,13 +92,37 @@
 		@include mq(lg, min) {
 			flex-basis: 40%;
 			margin-top: -70px;
-			border: 1px solid var(--color-grey-200);
 			padding: 24px;
 		}
 
 		@include mq(sm) {
 			flex-basis: 90%;
-			margin: 0 auto;
+		}
+	}
+
+	&__points {
+		position: absolute;
+		inset: 0;
+		display: grid;
+		place-items: center;
+		border: 1px solid var(--color-grey-200);
+		border-radius: 50%;
+		transform: rotate(-90deg);
+
+		@include mq(lg) {
+			display: none;
+		}
+	}
+
+	&__point {
+		@include circle(8px, var(--color-grey-300));
+
+		position: absolute;
+		border-radius: inherit;
+		transition: background-color 0.3s;
+
+		&--active {
+			background-color: var(--color-orange-400);
 		}
 	}
 
