--- a/src/styles/templates/_spollers.scss
+++ b/src/styles/templates/_spollers.scss
@@ -19,6 +19,7 @@
 		width: 100%;
 		font-size: 18px;
 		line-height: 1.3;
+		text-align: left;
 		color: var(--color-dark-600);
 		transition: color 0.3s;
 		gap: 10px;
