--- a/src/styles/components/blocks/footer/_footer-nav-menu.scss
+++ b/src/styles/components/blocks/footer/_footer-nav-menu.scss
@@ -1,62 +1,4 @@
 .footer {
-	flex: 0 0 auto;
-	border-left: 1px solid var(--color-grey-200);
-	background-color: var(--color-grey-100);
-
-	&__top {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		padding: 0 20px 50px;
-		gap: 30px;
-
-		@include mq(md, min) {
-			display: none;
-		}
-
-		@include mq(sm) {
-			padding-bottom: 40px;
-		}
-	}
-
-	&__logo {
-		margin-bottom: 20px;
-		height: 42px;
-		max-width: 233px;
-
-		@include mq(sm) {
-			height: 28px;
-			max-width: 155px;
-		}
-	}
-
-	.navigation-connection {
-		gap: 20px;
-
-		&__contacts {
-			gap: 5px;
-		}
-	}
-
-	&__items {
-		@include flex-simple(15px, column);
-	}
-
-	&__link {
-		@include link-with-arrows;
-
-		font-size: 16px;
-		line-height: 1.3;
-		letter-spacing: -0.04em;
-
-		@include mq(sm) {
-			font-size: 12px;
-		}
-	}
-
-	&__nav {
-		position: relative;
-	}
-
 	.nav-menu {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
@@ -74,6 +16,8 @@
 			}
 
 			@include mq(sm) {
+				border-top: 0;
+				border-bottom: 1px solid var(--color-grey-200);
 				padding: 28px 20px;
 			}
 
@@ -139,24 +83,16 @@
 				}
 			}
 
-			&:nth-child(odd) {
-				@include mq(sm) {
-					padding-right: 10px;
-				}
-			}
-
-			&:nth-child(even) {
-				@include mq(sm) {
-					padding-left: 10px;
-				}
-			}
-
 			&:nth-last-child(2),
 			&:nth-last-child(1) {
 				@include mq(sm) {
 					border-bottom: 1px solid var(--color-grey-200);
 					padding-bottom: 60px;
 				}
+			}
+
+			&:last-child {
+				border-right: 0;
 			}
 
 			@include mq(sm) {
@@ -169,45 +105,8 @@
 		}
 
 		@include mq(sm) {
-			grid-template-columns: repeat(2, 1fr);
+			grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
 			margin-bottom: 10px;
 		}
-	}
-
-	&__copyright {
-		position: absolute;
-		right: 0;
-		bottom: 80px;
-		padding: 0 25px;
-		width: 25%;
-		font-size: 12px;
-		letter-spacing: -0.03em;
-		color: var(--color-grey-500);
-
-		@include mq(lg) {
-			padding: 0 20px;
-		}
-
-		@include mq(md) {
-			width: 33.333%;
-		}
-
-		@include mq(sm) {
-			position: static;
-			width: 100%;
-			font-size: 10px;
-		}
-	}
-
-	@include mq(lg) {
-		padding-bottom: 80px;
-	}
-
-	@include mq(md) {
-		padding-top: 80px;
-	}
-
-	@include mq(sm) {
-		padding: 60px 0 80px;
 	}
 }
