--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -14,8 +14,8 @@ body {
 }
 
 .wrapper {
-	display: flex;
-	flex-direction: column;
+	@include flex-simple(0, column);
+
 	padding-top: 95px;
 	width: 100%;
 	height: 100%;
@@ -27,9 +27,23 @@ body {
 	@include mq(sm) {
 		padding-top: 72px;
 	}
+}
 
-	@include mq(xl, min) {
-		padding-left: 255px;
+.content {
+	display: flex;
+
+	&__side-bg {
+		flex: 0 0 255px;
+		background-color: var(--color-grey-100);
+
+		@include mq(xl) {
+			display: none;
+		}
+	}
+
+	&__blocks {
+		overflow: hidden;
+		width: 100%;
 	}
 }
 
