--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -16,7 +16,7 @@ body {
 .wrapper {
 	@include flex-simple(0, column);
 
-	padding-top: 95px;
+	// padding-top: 95px;
 	width: 100%;
 	height: 100%;
 
@@ -24,9 +24,9 @@ body {
 		padding-bottom: 80px;
 	}
 
-	@include mq(sm) {
-		padding-top: 72px;
-	}
+	// @include mq(sm) {
+	// 	padding-top: 72px;
+	// }
 }
 
 .content {
