--- a/src/styles/includes/_pages.scss
+++ b/src/styles/includes/_pages.scss
@@ -1,4 +1,5 @@
 // home-page
+@import '../pages/home-page/hero';
 @import '../pages/home-page/completed-projects/completed-projects';
 @import '../pages/home-page/completed-projects/completed-projects-tabs';
 @import '../pages/home-page/design-production';
