add fixed header

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -10,5 +10,7 @@
 	--color-grey-600: #6d6d6d;
 	--color-dark-600: #1d1d1d;
 	--color-black: #000;
+	--rgba-white-200: rgba(255, 255, 255, 0.2);
+	--rgba-black-500: rgba(0, 0, 0, 0.5);
 	--font-main: 'Inter';
 }
