--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -5,6 +5,7 @@
 
 // header
 @import '../components/blocks/header/header';
+@import '../components/blocks/header/header-transparent';
 @import '../components/blocks/header/burger/burger-button';
 @import '../components/blocks/header/burger/burger-menu';
 @import '../components/blocks/header/burger/burger-mobile';
