--- a/src/styles/pages/home-page/completed-projects/_completed-projects.scss
+++ b/src/styles/pages/home-page/completed-projects/_completed-projects.scss
@@ -1,8 +1,14 @@
 .completed-projects {
+	padding-top: 120px;
 	padding-left: 45px;
 
 	@include mq(lg) {
+		padding-top: 80px;
 		padding-left: 20px;
+	}
+
+	@include mq(sm) {
+		padding-top: 60px;
 	}
 
 	&__title {
