--- a/src/html/components/blocks/header/_header.html
+++ b/src/html/components/blocks/header/_header.html
@@ -3,7 +3,7 @@
  dark - темный фон, светлый текст ; 
 -->
 <div class="overlay" data-menu-overlay aria-hidden></div>
-<header class="header header--light">
+<header class="header @class">
     <nav class="header__navigation">
         <div class="header__wrapper-logo">
             <a class="header__logo logo" href="#">
