--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -16,17 +16,12 @@ body {
 .wrapper {
 	@include flex-simple(0, column);
 
-	// padding-top: 95px;
 	width: 100%;
 	height: 100%;
 
 	@include mq(lg) {
 		padding-bottom: 80px;
 	}
-
-	// @include mq(sm) {
-	// 	padding-top: 72px;
-	// }
 }
 
 .content {
@@ -86,6 +81,8 @@ body {
 	width: 100%;
 	height: 28px;
 	max-width: 155px;
+	filter: invert(7%) sepia(19%) saturate(13%) hue-rotate(326deg) brightness(93%)
+		contrast(89%);
 
 	@include mq(sm) {
 		height: 22px;
